# python-service-order-service

./: .gitignore  .ruff.toml  README.md  deploy.sh  pyproject.toml  requirements.txt  test-results.xml
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
prompts/: event.json  github_actions.md  gitignore.md  service_order_application.md  terraform.md
src/: __init__.py
src/service_order_lambda/: __init__.py  app.py  config.py  models.py  repository.py  validators.py
terraform/: .gitignore  api_gateway.tf  appconfig.tf  dynamodb.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  test_app.py  test_models.py  test_repository.py  test_validators.py
