[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "service-order-lambda"
version = "0.1.0"
description = "AWS Lambda for managing service orders"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Service Order Team" },
]
dependencies = [
    "boto3>=1.28.62",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto>=4.2.6",
    "mypy>=1.5.1",
    "ruff>=0.0.292",
    "types-boto3>=1.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "ANN", "S", "C4", "B", "A", "RUF"]
ignore = ["ANN401"]  # Allow using Any in type annotations

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "ANN001", "ANN201", "ANN202", "E501", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
files = ["src/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/service_order_lambda --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]